# SchoolCPP

ExamTry2/: CMakeLists.txt  Employee.cpp  Employee.h  Helpdesk.cpp  Helpdesk.h  HelpdeskEmployee.cpp  HelpdeskEmployee.h  Ticket.cpp  Ticket.h  main.cpp
ExamTry2/tickets/: HardwareTicket.cpp  HardwareTicket.h  SoftwareTicket.cpp  SoftwareTicket.h
Oefentoets/Project/: CMakeLists.txt  HardwareTicket.cpp  HardwareTicket.h  HelpDesk.cpp  HelpDesk.h  Helpdeskmedewerker.cpp  Helpdeskmedewerker.h  Medewerker.cpp  Medewerker.h  SoftwareTicket.cpp  SoftwareTicket.h  Ticket.cpp  Ticket.h  input.txt  main.cpp
Week1/: CMakeLists.txt  io.h  main.cpp
Week6IO/: CMakeLists.txt  main.cpp
assignmentSVG/: AllocateStatistics.cpp  AllocateStatistics.h  CMakeLists.txt  figure.txt  graph.tpl  main.cpp
assignmentSVG/shape/: Circle.cpp  Circle.h  Line.cpp  Line.h  Shape.h
week1/: CMakeLists.txt  io.cpp
week2/: CMakeLists.txt  main.cpp
week3/: CMakeLists.txt  main.cpp
week3BJ/: CMakeLists.txt  main.cpp
week3BJ/classes/: Blackjack.cpp  Blackjack.h
week3BJ/classes/Card/: Card.h  cardRank.h  cardSuit.h
